# cpp-project-templates

cpp-clang-project-template/: CMakeLists.txt  conanfile.py
cpp-clang-project-template/include/: sample.h
cpp-clang-project-template/source/: main.cpp  sample.cpp
cpp-clang-project-template/test/: test.cpp
cpp-crow-project-template/: CMakeLists.txt  conanfile.py
cpp-crow-project-template/source/: main.cpp
cpp-dbus-project-template/: CMakeLists.txt  conanfile.py  readme.md
cpp-dbus-project-template/source/: main.cpp
cpp-graphql-project-template/: CMakeLists.txt  Makefile
cpp-graphql-project-template/include/: sample.h
cpp-graphql-project-template/schema/: sample.graphql
cpp-llvm-project-template/: conanfile.py
cpp-llvm-project-template/source/: sample.cpp
cpp-project-gtest-template/: CMakeLists.txt  conanfile.py
cpp-project-gtest-template/test/: test.cpp
cpp-project-template/: conanfile.py
cpp-project-template/test/: test.cpp
cpp-protobuf-project-template/: CMakeLists.txt  conanfile.py
cpp-protobuf-project-template/schema/: sample.proto3
cpp-protobuf-project-template/source/: main.cpp
cpp-qt6-project-template/: CMakeLists.txt  conanfile.py  readme.md
cpp-qt6-project-template/source/: main.cpp
cpp-streams-project-template/: CMakeLists.txt  conanfile.py
cpp-streams-project-template/source/server/: main.cpp
cpp-systemd-project-template/: CMakeLists.txt  Makefile  conanfile.py  readme.md  sampleConfig.cmake.in
cpp-systemd-project-template/include/: sample.h
cpp-systemd-project-template/source/: sample.cpp
cpp-systemd-project-template/source/client/: main.cpp
cpp-systemd-project-template/source/server/: main.cpp
cpp-systemd-project-template/systemd/: sample.conf  sample.service
cpp-systemd-project-template/test/: test.cpp
cpp-thrift-project-template/: CMakeLists.txt  Makefile  conanfile.py
cpp-thrift-project-template/idl/: sample.thrift
cpp-thrift-project-template/source/client/: main.cpp
cpp-thrift-project-template/source/server/: main.cpp
